style dropdown, fix header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,6 @@ body {
   /*border: 1px solid black;*/
 }
 
-/*#content {
-  width: 100%;
-}*/
-
 form {
   height: 100%;
   width: 100%;
@@ -49,17 +45,13 @@ button {
   cursor: pointer;
 }
 
-/*button:hover {
-  background-color: #5a9fd8;
-}*/
-
 button a {
   color: white !important;
 }
 
 a, .on-click-link {
   cursor: pointer;
-  color: #5e5f60;
+  color: #5e5f60 !important;
   text-decoration: none;
 
   &:visited {
@@ -77,7 +69,7 @@ a:hover {
 
 .on-click-link:hover {
   cursor: pointer;
-  color: #378ace;
+  color: #378ace !important;
   text-decoration: none;
 }
 
@@ -92,7 +84,7 @@ ul {
   align-items: center;
 }
 
-.header-and-searchbar-container {
+.header-container {
   width: 1000px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -105,16 +97,36 @@ ul {
 
 .header {
   width: 1000px;
-  padding: 20px 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: #265b99;
   font-size: 20px;
+}
+
+.logo-and-searchbar-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 650px;
+}
+
+.cart-and-user-icon-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100px;
 }
 
 .logo {
   font-size: 40px;
+}
+
+.logo:hover {
+  color: #378ace !important;
 }
 
 .searchbar {
@@ -123,6 +135,10 @@ ul {
   height: 50px;
   color: white;
   font-size: 20px;
+}
+
+.sign-in-link {
+
 }
 
 .products-container {
@@ -164,7 +180,6 @@ ul {
 }
 
 .product-name-and-description-container {
-  /*margin-left: 15px;*/
   padding: 20px;
   width: 650px;
   height: 310px;
@@ -188,7 +203,6 @@ ul {
   align-items: flex-end;
   justify-content: space-between;
   margin-left: 50px;
-  /*margin-right: 15px;*/
   padding: 20px;
 }
 
@@ -283,9 +297,6 @@ a.product-page-hot-deals:hover {
   margin-top: 20px;
 }
 
-.cart-with-items {
-}
-
 .cart-titles {
   display: flex;
   flex-direction: row;
@@ -360,10 +371,6 @@ a.product-page-hot-deals:hover {
   color: red;
 }
 
-.checkout-button {
-  /*margin-top: 20px;*/
-}
-
 .login-form-container {
   width: 1000px;
   height: 310px;
@@ -374,8 +381,6 @@ a.product-page-hot-deals:hover {
 }
 
 .login-form {
-  /*border: 5px solid #5e5f60;*/
-  /*border-radius: 5px;*/
   margin-top: 10px;
   height: 250px;
   width: 300px;
@@ -384,16 +389,6 @@ a.product-page-hot-deals:hover {
   align-items: center;
   justify-content: space-between;
 }
-
-/*.login-form:hover {
-  border-color: #378ace;
-}*/
-
-/*.login-form-header {
-  font-size: 25px;
-  margin-bottom: 10px;
-  margin-top: 20px;
-}*/
 
 .login-form-input {
   height: 50px;
@@ -474,7 +469,6 @@ input[type=submit]:hover {
 }
 
 .clickable-step:hover {
-  /*background-color: red;*/
   color: red;
   border: 2px solid #378ace;
 }
@@ -708,4 +702,78 @@ input[type=submit]:hover {
   align-items: center;
   font-size: 30px;
   width: 400px;
+}
+
+.dd-menu {
+  display: inline-block;
+  position: relative;
+}
+
+.dd-menu.dd-menu-right .dd-menu-items {
+  right: 0;
+}
+
+.dd-menu.dd-menu-sm .dd-menu-items {
+  width: 125px;
+}
+
+.dd-menu .dd-menu-items {
+  position: absolute;
+  z-index: 7;
+  margin: 0.5em 0 0 0;
+}
+
+.dd-menu .dd-menu-items ul, .dd-menu .dd-menu-items ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: #000;
+  background-color: #fefefe;
+  border: 2px solid #5e5f60;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.29);
+}
+
+.dd-menu .dd-menu-items ul.dd-items-right li > *, .dd-menu .dd-menu-items ol.dd-items-right li > * {
+  text-align: right;
+}
+
+.dd-menu .dd-menu-items ul.dd-items-left li > *, .dd-menu .dd-menu-items ol.dd-items-left li > * {
+  text-align: left;
+}
+
+.dd-menu .dd-menu-items ul.dd-items-center li > *, .dd-menu .dd-menu-items ol.dd-items-center li > * {
+  text-align: center;
+}
+
+.dd-menu .dd-menu-items ul li:hover:not([role="separator"]):not(.separator),
+.dd-menu .dd-menu-items ul li > *:focus, .dd-menu .dd-menu-items ol li:hover:not([role="separator"]):not(.separator),
+.dd-menu .dd-menu-items ol li > *:focus {
+  color: #000;
+  /*background-color: #bdc3c7;*/
+  outline: none;
+}
+
+.dd-menu .dd-menu-items ul li > *:not(.dd-item-ignore), .dd-menu .dd-menu-items ol li > *:not(.dd-item-ignore) {
+  display: block;
+  width: auto;
+  min-width: 100%;
+  padding: 10px;
+  font-family: Roboto, sans-serif;
+  white-space: pre;
+  color: inherit;
+  text-decoration: none;
+  font-size: inherit;
+}
+
+.dd-menu .dd-menu-items ul li > button, .dd-menu .dd-menu-items ol li > button {
+  border: none;
+  background: transparent;
+}
+
+.dd-menu [role="separator"], .dd-menu .separator {
+  content: '';
+  display: block;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.15);
+  margin: 0.5em 0 0.5em 0;
 }
